spelling of Password changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="new">
         <p class="newpara" style="font-size: 12px;">
-            phone=<span class="strt">9</span><span class="whole">5</span>&email=<span class="startName"></span>@gmail.com&username=<span class="user"></span>&passward=Utpal666 
+            phone=<span class="strt">9</span><span class="whole">5</span>&email=<span class="startName"></span>@gmail.com&username=<span class="user"></span>&password=Utpal666 
         </p>
     </div>
 
